[package]
name = "rust-egui-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25"
egui_extras = "0.25"
eframe = "0.25.0"

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
